--- a/package.json
+++ b/package.json
@@ -38,36 +38,32 @@
     "major": "npm version major"
   },
   "peerDependencies": {
-    "@emotion/css": ">=11",
-    "@emotion/react": ">=11",
-    "@emotion/styled": ">=11",
     "react": ">=18",
     "react-dom": ">=18"
   },
   "dependencies": {
-    "@emotion/css": ">=11",
-    "@emotion/react": ">=11",
-    "@emotion/styled": ">=11",
     "react": ">=18",
     "react-dom": ">=18"
   },
   "devDependencies": {
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@rollup/plugin-url": "^8.0.2",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
     "@storybook/nextjs": "^7.6.17",
     "@storybook/react": "^7.6.17",
-    "@svgr/rollup": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.21",
     "@types/react": "^18",
+    "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.2",
@@ -75,8 +71,13 @@
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "normalize.css": "^8.0.1",
+    "postcss-import": "^16.1.0",
+    "reset-css": "^5.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-tsc-alias": "^1.1.2",
     "storybook": "^7.6.17",
     "ts-jest": "^29.1.2",
     "typescript": "^4.9.5"
